# advanced-seo-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  roadmap.md
.github/workflows/: test.yml
src/advanced_seo_mcp/: __init__.py  config.py  http_client.py  responses.py  server.py
src/advanced_seo_mcp/models/: __init__.py  ahrefs.py  common.py  onpage.py  psi.py  report.py  technical.py
src/advanced_seo_mcp/providers/: __init__.py  ahrefs_api.py  base.py  competitor_analyzer.py  content_analyzer.py  link_inspector.py  onpage_analyzer.py  psi_analyzer.py  reporter.py  schema_validator.py  sitemap_auditor.py  technical_auditor.py
tests/: conftest.py  test_ahrefs_api.py  test_config.py  test_content_analyzer.py  test_http_client.py  test_link_inspector.py  test_models.py  test_onpage.py  test_reporter.py  test_schema_validator.py  test_server.py  test_sitemap_auditor.py  test_technical.py
tests/fixtures/: ahrefs_backlinks.json  onpage_sample.html  psi_sample.json
