[project]
name = "advanced-seo-mcp"
version = "2.0.0"
description = "Professional SEO Analysis MCP Server for AI Agents"
readme = "README.md"
authors = [
    { name = "Pavel", email = "pavel@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "fake-useragent>=1.5.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.3.0",
    "mypy>=1.8",
    "pre-commit>=3.0",
]

[project.scripts]
advanced-seo = "advanced_seo_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
